2005-08-10  Ben Motmans  <ben.motmans@gmail.com>

	* CSharpBinding.mdp: references update

2005-08-10  Lluis Sanchez Gual  <lluis@novell.com> 

	* CSharpBindingCompilerManager.cs: Disable implicit references to
	system assemblies. All references must now be explicitely specified.

2005-08-06  Ben Motmans  <ben.motmans@gmail.com>

	* CSharpBindingCompilerManager.cs: correctly parse mcs errors.

2005-08-09  Lluis Sanchez Gual  <lluis@novell.com> 

	* Parser/Parser.cs:
	* Parser/Resolver.cs:
	* Gui/CodeGenerationPanel.cs: Use the new IParserContext API.
	
	* Parser/TypeVisitor.cs: Made the class internal.

2005-07-18  Lluis Sanchez Gual  <lluis@novell.com>

	* CSharp.glade:
	* Gui/CodeGenerationPanel.cs: Use a combo entry for the main class
	field. Disable that entry when building a library.

2005-07-14  Ben Motmans  <ben.motmans@gmail.com>

	* templates/GladeSharp2Project.xpt.xml:
	removed duplicate reference to glade-sharp-2.0

2005-07-11  Lluis Sanchez Gual  <lluis@novell.com>

	* Project/CSharpCompilerParameters.cs: Implement ICloneable.
	* CSharpLanguageBinding.cs: CreateCompilationParameters now returns an
	ICloneable.

2005-05-15  Lluis Sanchez Gual  <lluis@novell.com> 

	* CSharp.glade: Several fixes to make the dialogs more conforming
	to the HIG.

2005-04-17  John Luke  <john.luke@gmail.com>

	* Makefile.am: fix distcheck

2005-04-09  John Luke  <john.luke@gmail.com>

	* PrettyPrinter: kill (it was empty)
	* Parser/ExpressionFinder.cs: remove redundent assignment
	to fix warning
	* Gui/CodeGenerationPanel.cs: remove unused StringParserService
	section

2005-03-20  John Luke  <john.luke@gmail.com>

	* CSharpBindingCompilerManager.cs: display warning on invalid
	reference lookup, partial fix for bug #70645

2005-03-07  Lluis Sanchez Gual  <lluis@novell.com>

	* Parser/Resolver.cs: Track api changes.

2005-02-16  Ben Motmans  <ben.motmans@gmail.com>

	* ConsoleProject.xpt.xml:
	* CSharpSessionStateWebService.xpt.xml:
	* CSharpWebService.xpt.xml: