@@ -15,49 +15,29 @@
 	</Extension>
 
 	<Extension path = "/MonoDevelop/FileTemplates">
-		<FileTemplate id = "SessionState"
-		              location = "templates/CSharpSessionStateWebService.xft.xml"/>
-		<FileTemplate id = "WebService"
-		              location = "templates/CSharpWebService.xft.xml"/>
-		<FileTemplate id = "Empty"
-		              location = "templates/EmptyCSharpFile.xft.xml"/>
-		<FileTemplate id = "GnomeSharpProgram"
-		              location = "templates/GnomeSharpProgram.xft.xml"/>
-		<FileTemplate id = "GtkSharpWindow"
-		              location = "templates/GtkSharpWindow.xft.xml"/>
-		<FileTemplate id = "EmptyHTMLFile"
-		              location = "templates/EmptyHTMLFile.xft.xml"/>
-		<FileTemplate id = "AppConfigFile"
-		              location = "templates/AppConfigFile.xft.xml"/>
-		<FileTemplate id = "EmptyResourceFile"
-		              location = "templates/EmptyResourceFile.xft.xml"/>
-		<FileTemplate id = "EmptyTextFile"
-		              location = "templates/EmptyTextFile.xft.xml"/>
-		<FileTemplate id = "EmptyXMLFile"
-		              location = "templates/EmptyXMLFile.xft.xml"/>
+		<FileTemplate id = "SessionState" resource = "CSharpSessionStateWebService.xft.xml"/>
+		<FileTemplate id = "WebService" resource = "CSharpWebService.xft.xml"/>
+		<FileTemplate id = "Empty" resource = "EmptyCSharpFile.xft.xml"/>
+		<FileTemplate id = "GnomeSharpProgram" resource = "GnomeSharpProgram.xft.xml"/>
+		<FileTemplate id = "GtkSharpWindow" resource = "GtkSharpWindow.xft.xml"/>
+		<FileTemplate id = "EmptyHTMLFile" resource = "EmptyHTMLFile.xft.xml"/>
+		<FileTemplate id = "AppConfigFile" resource = "AppConfigFile.xft.xml"/>
+		<FileTemplate id = "EmptyResourceFile" resource = "EmptyResourceFile.xft.xml"/>
+		<FileTemplate id = "EmptyTextFile" resource = "EmptyTextFile.xft.xml"/>
+		<FileTemplate id = "EmptyXMLFile" resource = "EmptyXMLFile.xft.xml"/>
 	</Extension>
 
 	<Extension path = "/MonoDevelop/ProjectTemplates">
-		<ProjectTemplate id = "ConsoleProject"
-		                 location = "templates/ConsoleProject.xpt.xml"/>
-		<ProjectTemplate id = "EmptyProject"
-		                 location = "templates/EmptyProject.xpt.xml"/>
-		<ProjectTemplate id = "GladeSharpProject"
-		                 location = "templates/GladeSharpProject.xpt.xml"/>
-		<ProjectTemplate id = "GladeSharp2Project"
-		                 location = "templates/GladeSharp2Project.xpt.xml"/>
-		<ProjectTemplate id = "GnomeSharpProject"
-		                 location = "templates/GnomeSharpProject.xpt.xml"/>
-		<ProjectTemplate id = "GnomeSharp2Project"
-		                 location = "templates/GnomeSharp2Project.xpt.xml"/>
-		<ProjectTemplate id = "GtkSharpProject"
-		                 location = "templates/GtkSharpProject.xpt.xml"/>
-		<ProjectTemplate id = "GtkSharp2Project"
-		                 location = "templates/GtkSharp2Project.xpt.xml"/>
-		<ProjectTemplate id = "Library"
-		                 location = "templates/Library.xpt.xml"/>
-		<ProjectTemplate id = "BlankCombine"
-		                 location = "templates/BlankCombine.xpt.xml"/>
+		<ProjectTemplate id = "ConsoleProject" resource = "ConsoleProject.xpt.xml"/>
+		<ProjectTemplate id = "EmptyProject" resource = "EmptyProject.xpt.xml"/>
+		<ProjectTemplate id = "GladeSharpProject" resource = "GladeSharpProject.xpt.xml"/>
+		<ProjectTemplate id = "GladeSharp2Project" resource = "GladeSharp2Project.xpt.xml"/>
+		<ProjectTemplate id = "GnomeSharpProject" resource = "GnomeSharpProject.xpt.xml"/>
+		<ProjectTemplate id = "GnomeSharp2Project" resource = "GnomeSharp2Project.xpt.xml"/>
+		<ProjectTemplate id = "GtkSharpProject" resource = "GtkSharpProject.xpt.xml"/>
+		<ProjectTemplate id = "GtkSharp2Project" resource = "GtkSharp2Project.xpt.xml"/>
+		<ProjectTemplate id = "Library" resource = "Library.xpt.xml"/>
+		<ProjectTemplate id = "BlankCombine" resource = "BlankCombine.xpt.xml"/>
 	</Extension>
 	
 	<Extension path = "/SharpDevelop/Workbench/FileFilter">
@@ -117,24 +97,24 @@
 		<!-- C# -->
 		<Icon id         = "C#Prj"
 		      language   = "C#"
-		      resource   = "C#.ProjectIcon"/>
+		      resource   = "res:C#.ProjectIcon"/>
 
 		<Icon id         = "C#File"
 		      extensions = ".cs"
-		      resource   = "C#.FileIcon"/>
+		      resource   = "res:C#.FileIcon"/>
 		
 		<!-- Resources -->
 		<Icon id         = "ResourceFileIcon"
 		      extensions = ".resources,.resx"
-		      resource   = "Icons.16x16.ResourceFileIcon" />
+		      resource   = "md-resource-file-icon" />
 		<!-- XML -->
 		<Icon id         = "XmlFileIcon"
 		      extensions = ".xml"
-		      resource   = "FileIcons.XmlIcon" />
+		      resource   = "md-file-xml-icon" />
 		<!-- TextFiles -->
 		<Icon id         = "TextFileIcon"
 		      extensions = ".txt,.doc"
-		      resource   = "Icons.16x16.TextFileIcon"/>
+		      resource   = "md-text-file-icon"/>
 
 	</Extension>
 
@@ -142,5 +122,5 @@
 		<LanguageBinding id    = "CSharp"
 		                 supportedextensions = ".cs"
 		                 class = "CSharpBinding.CSharpLanguageBinding" />
-        </Extension>
+    </Extension>
 </AddIn>
