@@ -7,7 +7,7 @@
 	<TemplateConfiguration>
 		<_Name>Blank Solution</_Name>
 		<Category>MonoDevelop</Category>
-		<Icon>Icons.32x32.CombineIcon</Icon>
+		<Icon>md-combine-icon</Icon>
 		<LanguageName/>
 		<_Description>A blank solution</_Description>
 	</TemplateConfiguration>
