@@ -3,7 +3,7 @@
 	
 	<TemplateConfiguration>
 		<_Name>Empty File</_Name>
-		<Icon>C#.File.EmptyFile</Icon>
+		<Icon>res:C#.File.EmptyFile</Icon>
 		<Category>C#</Category>
 		<LanguageName>C#</LanguageName>
 		<_Description>Creates an empty C# file.</_Description>
