@@ -4,7 +4,7 @@
 	
 	<TemplateConfiguration>
 		<_Name>Gnome# Program</_Name>
-		<Icon>C#.File.Form</Icon>
+		<Icon>res:C#.File.Form</Icon>
 		<Category>C#</Category>
 		<LanguageName>C#</LanguageName>
 		<_Description>Creates a Gnome# program.</_Description>
