@@ -7,7 +7,7 @@
 	<TemplateConfiguration>
 		<_Name>Gtk# Project</_Name>
 		<Category>C#</Category>
-		<Icon>C#.Project.Form</Icon>
+		<Icon>res:C#.Project.Form</Icon>
 		<LanguageName>C#</LanguageName>
 		<_Description>Creates a Gtk# project.</_Description>
 	</TemplateConfiguration>
